--- a/Amex.CCA.WebApi/packages.config
+++ b/Amex.CCA.WebApi/packages.config
@@ -41,6 +41,8 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
+  <package id="Oracle.ManagedDataAccess" version="12.2.1100" targetFramework="net461" />
+  <package id="Oracle.ManagedDataAccess.EntityFramework" version="12.2.1100" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
