Adding web app files

--- a/Amex.CCA.WebClient/Amex.CCA.WebClient.csproj
+++ b/Amex.CCA.WebClient/Amex.CCA.WebClient.csproj
@@ -97,6 +97,9 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="app\src\app\shared\footer.template.html" />
+    <Content Include="app\src\app\shared\header.template.html" />
+    <Content Include="app\src\app\user\edit-profile.template.html" />
     <Content Include="packages.config" />
     <Content Include="app\.angular-cli.json" />
     <Content Include="app\.editorconfig" />
@@ -165,11 +168,19 @@
     <TypeScriptCompile Include="app\src\app\app.component.ts" />
     <TypeScriptCompile Include="app\src\app\app.module.ts" />
     <TypeScriptCompile Include="app\src\app\dashboard\dashboard.component.ts" />
+    <TypeScriptCompile Include="app\src\app\dashboard\dashboard.module.ts" />
+    <TypeScriptCompile Include="app\src\app\dashboard\dashboard.routes.ts" />
     <TypeScriptCompile Include="app\src\app\dashboard\index.ts" />
     <TypeScriptCompile Include="app\src\app\index.ts" />
     <TypeScriptCompile Include="app\src\app\nav-bar\index.ts" />
     <TypeScriptCompile Include="app\src\app\nav-bar\navbar.component.ts" />
     <TypeScriptCompile Include="app\src\app\routes.ts" />
+    <TypeScriptCompile Include="app\src\app\shared\footer.component.ts" />
+    <TypeScriptCompile Include="app\src\app\shared\header.component.ts" />
+    <TypeScriptCompile Include="app\src\app\shared\shared.module.ts" />
+    <TypeScriptCompile Include="app\src\app\user\edit-profile.component.ts" />
+    <TypeScriptCompile Include="app\src\app\user\user.module.ts" />
+    <TypeScriptCompile Include="app\src\app\user\user.routes.ts" />
     <TypeScriptCompile Include="app\src\environments\environment.prod.ts" />
     <TypeScriptCompile Include="app\src\environments\environment.ts" />
     <TypeScriptCompile Include="app\src\main.ts" />
@@ -182,6 +193,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="web.config" />
+    <Content Include="app\src\app\shared\footer.styles.scss" />
+    <Content Include="app\src\app\shared\header.styles.scss" />
+    <Content Include="app\src\app\user\edit-profile.styles.scss" />
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
