Changed the default names of asp.net identity tables

--- a/Amex.CCA.WebApi/Web.config
+++ b/Amex.CCA.WebApi/Web.config
@@ -10,7 +10,9 @@
     <section name="oracle.manageddataaccess.client" type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.122.1.0, Culture=neutral, PublicKeyToken=89b483f429c47342" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="Oracle.ManagedDataAccess.Client" connectionString="DATA SOURCE=ti-oracle01.sl.tiqri.com:1521/tiqri.sl.tiqri.com;USER ID=TIQRIDEV;Password=t1Qr1123" />
+    <add name="DefaultConnection" providerName="Oracle.ManagedDataAccess.Client" connectionString="DATA SOURCE=ti-oracle01.sl.tiqri.com:1521/tiqri.sl.tiqri.com;USER ID=AmexCCDB;Password=amexccdb" />
+    <!--<add name="DefaultConnection" providerName="Oracle.ManagedDataAccess.Client" connectionString="DATA SOURCE=localhost:1521/xe;USER ID=test2;Password=test2" />-->
+
     <add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=oracle_user;Password=oracle_user_password;Data Source=oracle" />
   </connectionStrings>
   <appSettings></appSettings>
