--- a/Amex.CCA.WebClient/Amex.CCA.WebClient.csproj
+++ b/Amex.CCA.WebClient/Amex.CCA.WebClient.csproj
@@ -97,6 +97,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="app\src\app\login\login.template.html" />
     <Content Include="app\src\app\shared\footer.template.html" />
     <Content Include="app\src\app\shared\header.template.html" />
     <Content Include="app\src\app\user\edit-profile.template.html" />
@@ -172,9 +173,13 @@
     <TypeScriptCompile Include="app\src\app\dashboard\dashboard.routes.ts" />
     <TypeScriptCompile Include="app\src\app\dashboard\index.ts" />
     <TypeScriptCompile Include="app\src\app\index.ts" />
+    <TypeScriptCompile Include="app\src\app\login\login.component.ts" />
+    <TypeScriptCompile Include="app\src\app\login\login.module.ts" />
+    <TypeScriptCompile Include="app\src\app\models\user.ts" />
     <TypeScriptCompile Include="app\src\app\nav-bar\index.ts" />
     <TypeScriptCompile Include="app\src\app\nav-bar\navbar.component.ts" />
     <TypeScriptCompile Include="app\src\app\routes.ts" />
+    <TypeScriptCompile Include="app\src\app\services\login.service.ts" />
     <TypeScriptCompile Include="app\src\app\shared\footer.component.ts" />
     <TypeScriptCompile Include="app\src\app\shared\header.component.ts" />
     <TypeScriptCompile Include="app\src\app\shared\shared.module.ts" />
@@ -196,6 +201,7 @@
     <Content Include="app\src\app\shared\footer.styles.scss" />
     <Content Include="app\src\app\shared\header.styles.scss" />
     <Content Include="app\src\app\user\edit-profile.styles.scss" />
+    <Content Include="app\src\app\login\login.styles.scss" />
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
