--- a/Amex.CCA.WebApi/Web.config
+++ b/Amex.CCA.WebApi/Web.config
@@ -37,13 +37,13 @@
     <validation validateIntegratedModeConfiguration="false" />
 
 
-      <httpProtocol>
+      <!--<httpProtocol>
         <customHeaders>
           <add name="Access-Control-Allow-Origin" value="*" />
           <add name="Access-Control-Allow-Methods" value="*" />
           <add name="Access-Control-Allow-Headers" value="*" />
         </customHeaders>
-      </httpProtocol>
+      </httpProtocol>-->
     
   </system.webServer>
   <runtime>
