Business Services and Data Access method related to saving credit card

--- a/Amex.CCA.BusinessServices/Amex.CCA.BusinessServices.csproj
+++ b/Amex.CCA.BusinessServices/Amex.CCA.BusinessServices.csproj
@@ -40,7 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreditCardBusinessService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Amex.CCApplication.DataAccess\Amex.CCA.DataAccess.csproj">
+      <Project>{4326cc9d-f3b8-458e-9261-c990972ae1f4}</Project>
+      <Name>Amex.CCA.DataAccess</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
