--- a/Amex.CCA.WebApi/Amex.CCA.WebApi.csproj
+++ b/Amex.CCA.WebApi/Amex.CCA.WebApi.csproj
@@ -261,6 +261,7 @@
     </Compile>
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\CreditCardViewModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
