Business Model Mapper and related changes

--- a/Amex.CCA.BusinessServices/Amex.CCA.BusinessServices.csproj
+++ b/Amex.CCA.BusinessServices/Amex.CCA.BusinessServices.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusinessModelMapper.cs" />
     <Compile Include="BusinessModels\CardTypeEntity.cs" />
     <Compile Include="BusinessModels\CreditCardEntity.cs" />
     <Compile Include="BusinessModels\NationalityEntity.cs" />
