credit card mapper changes.

--- a/Amex.CCApplication.DataAccess/Amex.CCA.DataAccess.csproj
+++ b/Amex.CCApplication.DataAccess/Amex.CCA.DataAccess.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CardStatusDataAccessHelper.cs" />
     <Compile Include="CardTypeDataAccessHelper.cs" />
     <Compile Include="CreditCardDataAccessHelper.cs" />
     <Compile Include="AmexDbContext.cs" />
@@ -183,6 +184,10 @@
     <Compile Include="Migrations\201709130535268_requestedByRemoved.Designer.cs">
       <DependentUpon>201709130535268_requestedByRemoved.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709131048418_changes1.cs" />
+    <Compile Include="Migrations\201709131048418_changes1.Designer.cs">
+      <DependentUpon>201709131048418_changes1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="NationalityDataAccessHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -278,6 +283,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709130535268_requestedByRemoved.resx">
       <DependentUpon>201709130535268_requestedByRemoved.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709131048418_changes1.resx">
+      <DependentUpon>201709131048418_changes1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
