--- a/Amex.CCA.WebClient/Amex.CCA.WebClient.csproj
+++ b/Amex.CCA.WebClient/Amex.CCA.WebClient.csproj
@@ -192,6 +192,7 @@
     <TypeScriptCompile Include="app\src\app\services\http.service.ts" />
     <TypeScriptCompile Include="app\src\app\services\index.ts" />
     <TypeScriptCompile Include="app\src\app\services\login.service.ts" />
+    <TypeScriptCompile Include="app\src\app\services\nationality-resolver.service.ts" />
     <TypeScriptCompile Include="app\src\app\services\router-guard.service.ts" />
     <TypeScriptCompile Include="app\src\app\shared\footer.component.ts" />
     <TypeScriptCompile Include="app\src\app\shared\header.component.ts" />
