--- a/Amex.CCA.WebClient/Amex.CCA.WebClient.csproj
+++ b/Amex.CCA.WebClient/Amex.CCA.WebClient.csproj
@@ -102,6 +102,8 @@
     <Content Include="app\src\app\shared\footer.template.html" />
     <Content Include="app\src\app\shared\header.template.html" />
     <Content Include="app\src\app\user\edit-profile.template.html" />
+    <Content Include="app\src\app\user\user-profile.template.html" />
+    <Content Include="app\src\assets\images\no-image.png" />
     <Content Include="packages.config" />
     <Content Include="app\.angular-cli.json" />
     <Content Include="app\.editorconfig" />
@@ -198,6 +200,7 @@
     <TypeScriptCompile Include="app\src\app\shared\header.component.ts" />
     <TypeScriptCompile Include="app\src\app\shared\shared.module.ts" />
     <TypeScriptCompile Include="app\src\app\user\edit-profile.component.ts" />
+    <TypeScriptCompile Include="app\src\app\user\user-profile.component.ts" />
     <TypeScriptCompile Include="app\src\app\user\user.module.ts" />
     <TypeScriptCompile Include="app\src\app\user\user.routes.ts" />
     <TypeScriptCompile Include="app\src\environments\environment.prod.ts" />
@@ -218,6 +221,7 @@
     <Content Include="app\src\app\login\login.styles.scss" />
     <Content Include="app\src\app\assets\css\common.styles.scss" />
     <Content Include="app\src\app\creditcard\creditcard.styles.scss" />
+    <Content Include="app\src\app\user\user-profile.styles.scss" />
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
