--- a/Amex.CCA.WebClient/app/package.json
+++ b/Amex.CCA.WebClient/app/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "^4.2.4",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "glyphicons": "^0.2.0",
+    "glyphicons-halflings": "^1.9.0",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
@@ -30,7 +32,6 @@
     "@angular/cli": "1.3.1",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
-   
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
